Implementation of turn type parameterization Service for calculating salary based on how long you have worked at the company